--- a/views/_navbar.ejs
+++ b/views/_navbar.ejs
@@ -9,16 +9,19 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/">Student Lists <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/">Student List <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Interview Lists</a>
+          <a class="nav-link" href="/company/list">Interview Lists</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/csv/view-csv">Csv Report</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/users/profile">Profile</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Csv Report</a>
+          <a class="nav-link" href="/csv/jobs">Jobs</a>
         </li>
       </ul>
     </div>
