Environmental variable changes

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,5 +1,5 @@
 <%- include('_navbar') %>
-    <link rel="stylesheet" href="/css/dashboard.css">
+    <link rel="stylesheet" href="<%= assertPath('css/dashboard.css') %>">
     <section class="student_det">
         <div class="mb-4">
             <!-- Button trigger modal -->
